# body-composition-tracking

./: .cursorrules  .gitignore  .pre-commit-config.yaml  .windsurfrules  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  eslint.config.js  package-lock.json  package.json  playwright.config.ts  playwright.setup.ts  pyproject.toml  requirements-dev.txt  requirements.txt  run_gui.py  setup.py  svelte.config.js  tailwind.config.js  vite.config.ts  vitest-setup-client.ts  vitest-setup-server.ts  vitest.config.client.ts  vitest.config.isolated.ts  vitest.config.server.ts  vitest.config.ts  vitest.setup.ts
body_comp_tracking/: __init__.py  cli.py  config.py
body_comp_tracking/data_sources/: withings_source.py
body_comp_tracking/gui/: __init__.py  app.py  index.html
body_comp_tracking/gui/src/css/: input.css
body_comp_tracking/gui/static/css/: style.css
body_comp_tracking/gui/templates/: index.html  script.js  style.css
body_comp_tracking/models/: __init__.py
e2e/: analysis-settings.spec.ts  auth.spec.ts  body-comp-data.spec.ts  cycle-data.spec.ts  data-writer-mock.ts  demo.test.ts  global-setup.ts  global-teardown.ts  import-workflow.spec.ts  raw-data.spec.ts
e2e/utils/: mock-utils.ts
scripts/: e2e-build.js  e2e-teardown.ts  test-unit-isolated.js  test-unit-isolated.ts
src/: app.css  app.scss
src/lib/components/: AnalysisSection.svelte  AnalysisSection.svelte.test.ts  AnalysisSettings.svelte  AnalysisSettings.svelte.test.ts  AuthSection.svelte  AuthSection.svelte.test.ts  ConfigSection.svelte  CycleDataTable.svelte  CycleDataTable.svelte.test.ts  DataTable.svelte  RawDataTable.svelte  TabNavigation.svelte
src/lib/components/charts/: HistoricalDataChart.svelte  HistoricalDataChart.svelte.test.ts
src/lib/server/: config.ts  cycles-api.test.ts  withings-auth.ts  withings-source.test.ts  withings-source.ts
src/lib/services/: auth.test.ts  auth.ts  data-service.test.ts  data-service.ts  import-client.ts  import.test.ts  import.ts
src/lib/stores/: auth.test.ts  auth.ts  data.test.ts  data.ts
src/lib/types/: data.ts  measurements.ts
src/lib/utils/: data-writer.test.ts  data-writer.ts  dataProcessing.test.ts  dataProcessing.ts  table-layout.test.ts  table-layout.ts  test-data-writer.ts
src/lib/utils/chart/: colors.test.ts  colors.ts  formatting.test.ts  formatting.ts  range-calculations.test.ts  range-calculations.ts
src/routes/: +layout.svelte  +page.svelte  page.svelte.test.ts
src/routes/analysis/: +page.svelte
src/routes/api/auth/authenticate/: +server.ts
src/routes/api/auth/authorize/: +server.ts
src/routes/api/auth/callback/: +server.ts
src/routes/api/auth/configure/: +server.ts
src/routes/api/auth/logout/: +server.ts
src/routes/api/auth/status/: +server.ts
src/routes/api/import/: +server.ts
src/routes/api/import/all/: +server.ts
src/routes/api/import/has-data/: +server.ts
src/routes/api/import/intelligent/: +server.ts
src/routes/auth/callback/: +page.svelte
src/routes/body-comp-data/: +page.svelte
src/routes/cycle-data/: +page.svelte
src/routes/data-import/: +page.svelte
src/routes/raw-data/: +page.svelte
src/styles/themes/: theme-glassmorphism-integration.scss  theme-glassmorphism.scss
tests/: __init__.py  test_gui_import.py  test_gui_status_handling.py  test_import_functionality_fixes.py  test_muscle_mass_calculation.py  test_withings_api_connection.py  test_withings_data_import.py  test_withings_source.py
