[build-system]
requires = ["setuptools>=42.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=body_comp_tracking --cov-report=term-missing"

[tool.coverage.run]
source = ["body_comp_tracking"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[tool.ruff]
line-length = 88
target-version = "py38"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "N",  # pep8-naming
    "PL", # pylint
    "RUF", # ruff-specific
]
ignore = [
    "E203",  # whitespace before ':' (conflicts with black)
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # Use `raise ... from err` or `raise ... from None`
    "UP006",  # non-pep585-annotation
    "UP007",  # non-pep604-annotation
    "PLR2004", # Magic value used in comparison
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]  # Use of `assert` in tests is fine

[project]
name = "body-comp-tracking"
version = "0.1.0"
description = "A tool to track and analyze body composition metrics from Withings and other sources"
readme = "README.md"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Utilities",
]
keywords = ["health", "fitness", "body-composition", "withings", "tracking"]
dependencies = [
    "requests>=2.25.1,<3.0.0",
    "requests-oauthlib>=1.3.0,<2.0.0",
    "python-dateutil>=2.8.1,<3.0.0",
    "click>=8.0.0,<9.0.0",
    "tabulate>=0.8.9,<0.10.0",
    "oauthlib>=3.2.0,<4.0.0",
    "appdirs>=1.4.4,<2.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["body_comp_tracking*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"body_comp_tracking" = ["py.typed"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<8.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "pytest-mock>=3.10.0,<4.0.0",
    "pytest-xdist>=3.0.0,<4.0.0",
    "mypy>=1.0.0,<2.0.0",
    "types-requests>=2.28.0,<3.0.0",
    "types-python-dateutil>=2.8.0,<3.0.0",
    "types-pyyaml>=6.0.0,<7.0.0",
    "types-oauthlib>=3.2.0,<4.0.0",
    "black>=23.0.0,<24.0.0",
    "isort>=5.12.0,<6.0.0",
    "flake8>=6.0.0,<7.0.0",
    "flake8-black>=0.3.0,<0.4.0",
    "flake8-isort>=6.0.0,<7.0.0",
    "flake8-docstrings>=1.6.0,<2.0.0",
    "flake8-import-order>=0.18.1,<0.19.0",
    "pre-commit>=3.0.0,<4.0.0",
    "ipython>=8.0.0,<9.0.0",
    "build>=0.10.0,<1.0.0",
    "twine>=4.0.0,<5.0.0",
    "wheel>=0.40.0,<1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/body-composition-tracking"
Documentation = "https://github.com/yourusername/body-composition-tracking#readme"
Changelog = "https://github.com/yourusername/body-composition-tracking/releases"
Issues = "https://github.com/yourusername/body-composition-tracking/issues"
Source = "https://github.com/yourusername/body-composition-tracking"

[project.scripts]
body-comp = "body_comp_tracking.cli:cli"
