[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm>=6.2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "body-comp-tracking"
version = "0.1.0"
description = "A tool to track and analyze body composition metrics from various sources"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Vadim Demkiv", email = "vdemkiv@pm.me"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.25.1,<3.0.0",
    "requests-oauthlib>=1.3.0,<2.0.0",
    "python-dateutil>=2.8.1,<3.0.0",
    "click>=8.0.0,<9.0.0",
    "tabulate>=0.8.9,<0.10.0",
    "oauthlib>=3.2.0,<4.0.0",
    "appdirs>=1.4.4,<2.0.0",
    "pywebview>=4.2.2,<5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<8.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "pytest-mock>=3.10.0,<4.0.0",
    "pytest-xdist>=3.0.0,<4.0.0",
    "mypy>=1.0.0,<2.0.0",
    "black>=23.0.0,<24.0.0",
    "isort>=5.12.0,<6.0.0",
    "flake8>=6.0.0,<7.0.0",
    "flake8-black>=0.3.0,<0.4.0",
    "flake8-isort>=6.0.0,<7.0.0",
    "flake8-docstrings>=1.6.0,<2.0.0",
    "flake8-import-order>=0.18.1,<0.19.0",
    "pre-commit>=3.0.0,<4.0.0",
    "ipython>=8.0.0,<9.0.0",
    "build>=0.10.0,<1.0.0",
    "twine>=4.0.0,<5.0.0",
    "wheel>=0.40.0,<1.0.0",
    "types-requests>=2.28.0,<3.0.0",
    "types-python-dateutil>=2.8.0,<3.0.0",
    "types-pyyaml>=6.0.0,<7.0.0",
    "types-oauthlib>=3.2.0,<4.0.0",
    "types-requests-oauthlib>=1.3.0,<2.0.0",
    "types-tabulate>=0.8.9,<0.10.0",
    "types-click>=7.1.0,<8.0.0",
]

gui = [
    "PyQt5>=5.15.9,<6.0.0; platform_system=='Windows' or platform_system=='Linux'",
    "PyQtWebEngine>=5.15.6,<6.0.0; platform_system=='Windows' or platform_system=='Linux'"
]

gui-win32 = ["pywebview[winforms]>=4.2.2,<5.0.0"]
gui-macos = ["pywebview[cocoa]>=4.2.2,<5.0.0"]
gui-gtk = ["pywebview[gtk]>=4.2.2,<5.0.0"]
gui-edge = ["pywebview[edgechromium]>=4.2.2,<5.0.0"]

gui-all = [
    "body-comp-tracking[gui]",
    "body-comp-tracking[gui-win32]",
    "body-comp-tracking[gui-macos]",
    "body-comp-tracking[gui-gtk]",
    "body-comp-tracking[gui-edge]"
]

[project.urls]
Homepage = "https://github.com/yourusername/body-composition-tracking"
Documentation = "https://github.com/yourusername/body-composition-tracking#readme"
Changelog = "https://github.com/yourusername/body-composition-tracking/releases"
Issues = "https://github.com/yourusername/body-composition-tracking/issues"
Source = "https://github.com/yourusername/body-composition-tracking"

[project.scripts]
body-comp = "body_comp_tracking.cli:cli"
body-comp-gui = "body_comp_tracking.gui.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["body_comp_tracking*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"body_comp_tracking" = ["py.typed"]
"body_comp_tracking.gui.templates" = ["*.html"]

[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 120
skip = [".venv", "build", "dist"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["PyQt5.*", "PyQtWebEngine.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=body_comp_tracking --cov-report=term-missing"

[tool.coverage.run]
source = ["body_comp_tracking"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[tool.ruff]
line-length = 120
target-version = "py38"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "N",  # pep8-naming
    "PL", # pylint
    "RUF", # ruff-specific
]
ignore = [
    "E203",  # whitespace before ':' (conflicts with black)
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # Use `raise ... from err` or `raise ... from None`
    "UP006",  # non-pep585-annotation
    "UP007",  # non-pep604-annotation
    "PLR2004", # Magic value used in comparison
]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]  # Use of `assert` in tests is fine
